<resources>
    <string name="app_name">Can You</string>
    <string name="app_title">Can You .. ?</string>
    <!--    login signup-->
    <string name="login">Login</string>
    <string name="Not_registered">New User? SignUp Now</string>
    <string name="submit_btn">Submit</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="signup_title">Here\'s Your First Step With Us!</string>
    <string name="login_title">Welcome\n \t \t \t \t \t \t \t \t Back!</string>
    <string name="gender">Gender</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="name_hint">Full Name</string>
    <string name="national_id_hint">National ID</string>
    <string name="DOB_hint">Date Of Birth</string>
    <string name="phone_num_hint">Phone Number</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="have_acc">I Have Account</string>
    <string name="select_hint">City</string>
    <!--     Navigation Drawer-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="safe_doc">Safety Documentation</string>
    <string name="requests">Requests</string>
    <string name="about">About Us</string>
    <string name="nav_header">See Your Profile</string>
    <!--     App Welcome Slider-->
    <string name="next_btn">Next</string>
    <string name="skip_btn">Skip</string>
    <string name="slide1_heading">Interactive</string>
    <string name="slide1_body_text">An interactive community that allows you to share your skills, assistance, and needs with others.</string>
    <string name="slide2_heading">easy-to-use</string>
    <string name="slide2_body_text">It\'s an easy-to-use communication app that facilitates the requesting process and showing the services a person can provide.</string>
    <string name="slide3_heading">Volunteer Or Needy ?</string>
    <string name="slide3_body_text">Whether you are a volunteer or needy, our community supports what you need to communicate with the other group and achieve your goal.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    settings fragment-->
    <string name="edit_btn">Edit Profile Photo</string>
    <string name="night_mode">Night Mode</string>
    <string name="security">Security &amp; Privacy</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>

    <!--Home page-->
    <string name="Create_Post_ET">What do you need ?      </string>


    <!--select profile image page-->
    <string name="choose_pic">Choose your picture</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>

    <!-- Profile Upload Layout-->
    <string name="choose_upload">Choose to upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="back">Back</string>

    <!--    item post layout-->
    <string name="comment">Comments</string>
    <string name="enter_comment">Write a Comment</string>

    <!--    create post page-->
    <string name="choose_photo">Choose Image </string>

    <!--    profile page-->
    <string name="follower">Follower </string>
    <string name="follow">Follow </string>
    <string name="message">Message </string>
    <string name="following">Following </string>


    <string name="search">Search in You Can .. </string>
    <string name="Type_message">Type a message </string>



</resources>