<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
   <group
       android:checkableBehavior="single"
       >
<item
    android:id="@+id/nav_home"
    android:title="@string/home"
    android:icon="@drawable/nav_home"


    />
       <item
    android:id="@+id/nav_chats"
    android:title="@string/chats"
    android:icon="@drawable/nav_chat"

    />
       <item
           android:id="@+id/nav_settings"
           android:icon="@drawable/nav_settings"
           android:title="@string/settings"/>
       <item
           android:id="@+id/nav_requests"
           android:icon="@drawable/nav_request"
           android:title="@string/requests"/> <item
           android:id="@+id/nav_saf_doc"
           android:icon="@drawable/nav_doc"
           android:title="@string/safe_doc"/>
       <item
           android:id="@+id/nav_about"
           android:icon="@drawable/nav_info"
           android:title="@string/about"/>

   </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="Logout"/>
        </menu>
    </item>
</menu>