<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup1Fragment"
    android:padding="@dimen/_15sdp">

 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/name"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/name_hint"
     app:counterEnabled="true"
     app:counterMaxLength="25"
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
     >

     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:drawableStart="@drawable/ic_baseline_person_24"
             android:drawablePadding="@dimen/_9sdp"

         />
 </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
     >

     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:drawableStart="@drawable/ic_baseline_email_24"
         android:drawablePadding="@dimen/_9sdp"

         />
 </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/national_id"
        android:layout_width="match_parent"
     android:layout_height="wrap_content"
        android:hint="@string/national_id_hint"
        app:counterEnabled="true"
        app:counterMaxLength="14"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
     >

     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:drawableLeft="@drawable/ic_baseline_add_card_24"
         android:drawablePadding="@dimen/_9sdp"

         />
 </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout

    android:id="@+id/phone_num"
    android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:hint="@string/phone_num_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
     >

     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:drawableLeft="@drawable/ic_baseline_phone_24"
         android:drawablePadding="@dimen/_9sdp"
         />
 </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/city_drop_down_menu"
    android:layout_width="match_parent"
     android:layout_height="wrap_content"
        android:hint="@string/select_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
     >

     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:drawableLeft="@drawable/ic_baseline_location_on_24"
         android:drawablePadding="@dimen/_9sdp"
         />
 </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/gender_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:text="@string/gender"
        android:layout_marginLeft="@dimen/_2sdp"
        />
    <RadioGroup
    android:id="@+id/gender_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_2sdp"

        >
<com.google.android.material.radiobutton.MaterialRadioButton

    android:id="@+id/male_radio_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/male_gender"

    />
<com.google.android.material.radiobutton.MaterialRadioButton
android:id="@+id/female_radio_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_20sdp"
    android:fontFamily="serif"
    android:text="@string/female_gender"
    />
</RadioGroup>

    </LinearLayout>