<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbkb"
    tools:context=".SignupActivity">
<TextView
    android:id="@+id/signup_title_TV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/signup_title_TV"
    android:text="@string/signup_title"
    android:textColor="@color/white"
    android:textSize="@dimen/_36ssp"
    android:textStyle="bold|italic"
    android:padding="@dimen/_27sdp"
    />
    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/signup_title_TV"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_9sdp"
        android:hint="@string/name_hint"
        android:padding="@dimen/_6sdp"
        />
 <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
     android:inputType="textEmailAddress"
     android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
     android:drawableStart="@drawable/ic_baseline_email_24"
     android:drawablePadding="@dimen/_9sdp"
     android:hint="@string/email_hint"
     android:padding="@dimen/_6sdp"
        />
<EditText
        android:id="@+id/national_id"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
    android:drawableLeft="@drawable/ic_baseline_add_card_24"
    android:drawablePadding="@dimen/_9sdp"
    android:hint="@string/national_id_hint"
    android:padding="@dimen/_6sdp"
        />
    <EditText
        android:id="@+id/phone_num"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/national_id"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="phone"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
    android:drawableLeft="@drawable/ic_baseline_phone_24"
    android:drawablePadding="@dimen/_9sdp"
    android:hint="@string/phone_num_hint"
    android:padding="@dimen/_6sdp"
        />

<TextView
    android:id="@+id/gender_TV"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/phone_num"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:textColor="@color/white"
    android:fontFamily="serif"
    android:textStyle="bold|italic"
    android:text="@string/gender"
    android:textSize="@dimen/_15ssp"
    />
<RadioGroup
    android:id="@+id/gender_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/gender_TV"
    app:layout_constraintStart_toStartOf="parent"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/_20sdp"

    >

    <RadioButton
        android:id="@+id/male_radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:text="@string/male_gender"
        android:textSize="@dimen/_15ssp"
        />
    <RadioButton
        android:id="@+id/female_radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:text="@string/female_gender"
        android:textSize="@dimen/_15ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        />
</RadioGroup>

  <TextView
        android:id="@+id/city_drop_down_menu"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/select_hint"
        app:hintTextColor="@color/white"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_20sdp"

    />

    <EditText
        android:id="@+id/pass"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/city_drop_down_menu"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_9sdp"
        android:hint="@string/pass_hint"
        android:padding="@dimen/_6sdp"
        />
    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_9sdp"
        android:hint="@string/confirm_pass_hint"
        android:padding="@dimen/_6sdp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/have_acc"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold|italic"
        android:fontFamily="serif"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
    />
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/black"
        app:cornerRadius="@dimen/_80sdp"
        android:drawableLeft="@drawable/ic_baseline_arrow_right_alt_24"
         android:padding="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>