<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg"

    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/login_title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_35ssp"
        android:textStyle="bold|italic"
        android:layout_marginTop="@dimen/_68sdp"
        android:layout_marginStart="@dimen/_3sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title_TV">



        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:background="@drawable/custom_login_edittext"
            android:drawableLeft="@drawable/login_email"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="serif"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="@color/gray"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/custom_login_edittext"
            android:drawableLeft="@drawable/login_lock"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="serif"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="@color/gray"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/prim_clr"
            android:fontFamily="serif"
            android:text="@string/submit_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold|italic"
            app:cornerRadius="@dimen/_40sdp" />
    </LinearLayout>

    <Button
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="serif"
        android:text="@string/Not_registered"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold|italic"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>